Fixed max-width text overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 .top-content {
-    max-width: 900px;
+    max-width: 912px;
     align-self: center;
     margin-top: 24px;
     margin-bottom: 248px;
